PA-258: README, swagger
